--- a/src/SampleRepository/appsettings.json
+++ b/src/SampleRepository/appsettings.json
@@ -1,7 +1,9 @@
 {
+
+  "AccessToken": "PUT IN USER SECRETS!",
   "OrgName": "DotNet-Ninja",
   "RepositoryName": "SampleRepository",
   "BranchName": "Test-Branch",
   "ClientName": "SampleClient",
-  "FilePath": "samplefile.txt" 
+  "FilePath": "samplefile.txt"
 }
